tdf#124025 Update formula before printing

Reintroduce the UpdateFields call, but guard it so that
it does not modify the doc (as it was before)

Change-Id: I23e814f0b5d900d145dc82272034f03e66c079ed
Reviewed-on: https://gerrit.libreoffice.org/69696
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
(cherry picked from commit 055480aac88e4688619e9a7815e0a8b0ab97a5a1)
Reviewed-on: https://gerrit.libreoffice.org/69727
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>